--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "private": true,
     "dependencies": {
         "@craco/craco": "^6.0.0",
-        "@reach/router": "^1.3.4",
         "@tailwindcss/postcss7-compat": "^2.0.2",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
@@ -16,6 +15,7 @@
         "react-dom": "^17.0.1",
         "react-infinite-scroll-component": "^5.1.0",
         "react-modal": "^3.12.1",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
         "web-vitals": "^0.2.4"
